k3s/spacecloud/spacecloud-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spacecloud-tls-ingress
  namespace: space-cloud
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - spacecloud.test321.com
      secretName: spacecloud-tls
  rules:
    - host: spacecloud.test321.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4122
